# cppnow17_nbdl

./: .gitignore  CMakeLists.txt  Makefile  README.md  cppdock.ini  cppdock.json
code_snips/: CMakeLists.txt
code_snips/code/: bind_stuff.cpp  bind_stuff_output.cpp  bindable_variant.cpp  bindable_variant_output.cpp  consumer_key_event.cpp  consumer_notify.cpp  empty_html.cpp  empty_html_match.cpp  empty_html_match_2.cpp  empty_html_match_if.cpp  empty_struct.cpp  entity_define.cpp  find_index.cpp  hana_flatten.cpp  hana_flatten_impl.cpp  hana_monad.cpp  make_context.cpp  path_promise.cpp  path_promise_reject.cpp  producer_impl.cpp  producer_make.cpp  producer_send.cpp  require_type.cpp  run_async.cpp  run_async_connect.cpp  store_get_impl.cpp  store_get_map.cpp  store_match_entity.cpp  store_match_hana_map.cpp  store_match_path.cpp  store_match_path_nothing.cpp  store_match_tuple.cpp  store_match_variant.cpp  store_match_variant_id.cpp  tag_of_my_list.cpp  tag_of_my_struct.cpp  tag_of_tuple.cpp  test.cpp  unhandled_rejection.cpp
code_snips/docker/: Dockerfile_deps  docker_deps.html
code_snips/src/: index.js  package.json  template.html  template.html.1  template.html.2
code_snips/src/highlightjs/languages/: cpp.js  julia.js
code_snips/src/highlightjs/styles/: ir-black.css
docker/: Dockerfile-develop  Dockerfile-web_develop
docs/: index.html
include/cppnow17/: code_syntax.hpp  current_slide.hpp  diagram.hpp  docker_syntax.tpl.hpp  make_context_def.hpp  slide_action.hpp  slide_spec.hpp  slides.hpp
include/cppnow17/web/: key_control.hpp  make_context.hpp  render_slide.hpp
metabench/: CMakeLists.txt
metabench/chaining/: CMakeLists.txt  chaining.cpp  main.cpp  variadic.cpp
metabench/static_polymorphism/: CMakeLists.txt  Makefile  main.cpp
web_app/: CMakeLists.txt  consolidate.js  main.cpp
web_app/www/: bundle_template.html  font.base64  index.html  origins.css  test_diagram.html
www/: index.html  origins.css
